project is basically completely functional. finally tweaking and making the page prettier needed

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
                 </ul>
         </section>
         <aside>
-            <div id="scoreBox">
-                <ul id="scoreList"></ul>
-            </div>
+            
             <div id="timeBox">
                 <h2><span id="timeLeftSpan">60</span> seconds left</h2>
+            </div>
+            <div id="scoreBox">
+                <h2>Score Box</h2>
+                <ul id="scoreList"></ul>
             </div>
         </aside>
     </main>
