--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </header>
     <main>
         <section>
-            <h2 id="question">QUESTION HERE</h2>
+            <h2 id="question">Please press the Start Button at the top to play!</h2>
                 
         </section>
         <section>
-                <ul>
+                <ul id="buttons">
                     <li>
                         <button id="choice1">First Choice</button>
                     </li>
